# animeyou-api

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
workflows/: main.yml
