[package]
name = "anime-you-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1",features=["json"]}
reqwest = {version="0.11.12",features=["blocking","json"]}
serde = "1.0.145"
tokio = {version="1.21.2",features=["full"]}
scraper = "0.13.0"
serde_json = "1.0.85"